35_Projects/18B20_multiple_serial_control/serialVersion_01/30_Firmware/build_log3.txt
Processing seeed_xiao_esp32c3 (platform: espressif32; board: seeed_xiao_esp32c3; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/seeed_xiao_esp32c3.html
PLATFORM: Espressif 32 (6.7.0) > Seeed Studio XIAO ESP32C3
HARDWARE: ESP32C3 160MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20016.0 (2.0.16) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 35 compatible libraries
Scanning dependencies...
Dependency Graph
|-- OneWire @ 2.3.8
|-- DallasTemperature @ 3.11.0
Building in release mode
Compiling .pio\build\seeed_xiao_esp32c3\src\main.cpp.o
Archiving .pio\build\seeed_xiao_esp32c3\libe9a\libOneWire.a
Archiving .pio\build\seeed_xiao_esp32c3\lib4a2\libDallasTemperature.a
Indexing .pio\build\seeed_xiao_esp32c3\libe9a\libOneWire.a
Indexing .pio\build\seeed_xiao_esp32c3\lib4a2\libDallasTemperature.a
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\cbuf.cpp.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-adc.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-bt.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-cpu.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-dac.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-gpio.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-i2c-slave.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-i2c.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-ledc.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-matrix.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-misc.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-psram.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-rgb-led.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-rmt.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-sigmadelta.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-spi.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-time.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-timer.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-tinyusb.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-touch.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\esp32-hal-uart.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\firmware_msc_fat.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\libb64\cdecode.c.o
Compiling .pio\build\seeed_xiao_esp32c3\FrameworkArduino\libb64\cencode.c.o
pio : src/main.cpp: In funct
ion 'void loop()':
위치 줄:1 문자:1
+ pio run 2>&1 | Select-Obje
ct -Last 100 | Out-File -Fil
ePath "build_lo ...
+ ~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (src/m  
  ain.cpp: In function 'v   
 oid loop()'::String) []    
, RemoteException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
src/main.cpp:137:13: error: 
'printHelpMenu' was not decl
ared in this scope
             printHelpMenu()
;
             ^~~~~~~~~~~~~
*** [.pio\build\seeed_xiao_e
sp32c3\src\main.cpp.o] Error
 1
========================== [
FAILED] Took 9.56 seconds ==
========================
